Update Note JVM 内存结构