@@ -1,600 +1,468 @@
-# Java内存结构
+# JVM 内存结构
 
-### 一、java JVM 内存划分
+- 虚拟内存：将一些磁盘空间当做内存使用；
+
+# 一、 JVM 内存划分
 
 jdk 中 1.7 和 1.8 中间有区别
 
-- 虚拟机栈：栈帧：每一个方法执行的时候都会创建一个与该方法有关并且独有的栈帧（JVM 是基于栈执行的），里面存储操作数栈中数据，局部变量表、方法的返回地址（出口）等，即主要存储与方法执行相关的内容；
+JVM 在运行 Java 程序的过程中会将其所管理的内存划分为若干个不同的数据区域，JVM 管理的内存包括以下几个运行时数据区域：
 
-- 程序计数器（Program Counter）：描述线程在执行字节码时候，执行完当前字节码之后，指定下一行字节码的位置在哪；
-- 本地方法栈：方法上加上 Native 关键字，表示该方法是有 C/C++ 实现，不是 Java 实现的，即主要用于执行本地方法；
-- 堆（Heap）：对所有线程共享，存放绝大部分的对象实例，Java 中不能直接使用对象，只能通过引用方式获取该对象然后使用它，引用作为一个变量是在栈中。
-- 方法区：对所有线程共享，存储元信息，包括常量、静态变量、类中（Class ）固有的信息； **永久代（Permanent Generation）从 JDK 1.8 中已经废弃 **
-    - 常量池：方法区的一部分
-    - 直接内存：不是 JVM 管理的内存，由操作系统进行管理；
+![img](Java%E5%86%85%E5%AD%98%E7%BB%93%E6%9E%84.resource/166786b5cf6d7f95)
 
-### 二、java 对象创建过程
+| 区域       | 是否线程共享 | 是否会内存溢出 |
+| ---------- | ------------ | -------------- |
+| 程序计数器 | 否           | 不会           |
+| 虚拟机栈   | 否           | 会             |
+| 本地方法栈 | 否           | 会             |
+| 堆         | 是           | 会             |
+| 方法区     | 是           | 会             |
+
+
+
+- 虚拟机栈：每个虚拟机栈都是归属于一个线程的，是线程私有的空间，当一个线程创建的时候，与之对应的虚拟机栈就产生了，线程消亡则对应的虚拟机栈就消失；**生命周期同线程相同**；其描述的是 Java 方法执行的内存模型，每个方法执行的同时都会创建一个栈帧。
+
+    - 虚拟机栈中数据称为：栈帧：每一个方法执行的时候都会创建一个与该方法有关并且独有的栈帧（JVM 是基于栈执行的），里面存储操作数栈中数据，局部变量表（就是该线程可以自己访问到的局部变量信息（包括八种基本数据类型（其中 64 位的 long、double 占用两个局部变量空间（Slot））和对象引用（reference 类型，它不等同于对象本身，可能是一个指向对象起始地址的引用指针，也可能是指向一个-  代表对象的句柄或者其他与此对象相关的位置）））、方法的返回地址（出口，即执行一条字节码指令的地址）、动态连接等，即主要存储与方法执行相关的内容；**每个方法从调用到执行完毕，对应一个栈帧在虚拟机栈中的入栈和出栈。** 
+
+    - **通常所说的栈，一般是指虚拟机栈中的局部变量表部分**。局部变量表所需的内存在编译期间完成分配。 栈的大小可以固定也可以动态扩展，当扩展到无法申请足够的内存，则OutOfMemoryError。 当栈调用深度大于JVM所允许的范围，会抛出StackOverflowError的错误，不过这个深度范围不是一个恒定的值
+    - 局部变量表所需的内存空间实在编译期间完成分配，运行期不会改变；
+    - 异常：如果线程请求的栈深度大于虚拟机所允许的深度，将抛出 StackOverflowError 异常；当虚拟机在动态扩展时候无法申请到足够的内存，将抛出 OutOfMemoryError 异常；
+
+- 程序计数器（Program Counter Register）：是当前线程所执行的字节码的行号指示器，描述字节码解释权工作时通过改变这个计数器的值来选取下一条需要执行的字节码指令，线程在执行字节码时候，执行完当前字节码之后，指定下一行字节码的位置在哪（因为执行可以顺序也可以跳转）；
+    
+    - 是线程所私有的内存空间（或者说是数据结构），针对多线程，本质上是通过线程轮流切换并分配处理器执行时间的方式实现，即在任意一个确定时刻，一个处理器都只会执行一条线程中的指令，因此切换执行下一个线程需要记住上一个线程挂起到什么位置（便于恢复到正确的执行位置），因此**每个线程都有一个独立的程序计数器**，各个线程之间计数器互不影响，独立存储；
+    - 如果线程执行的是一个 Java  方法，则计数器记录的是正在执行的虚拟机字节码指令的地址，如果正在执行的是 Native 方法，则计数器值为空（Undefined）；
+    
+- 本地方法栈（Native Method Stack）：方法上加上 Native 关键字，表示该方法是有 C/C++ 实现，不是 Java 实现的，即主要用于执行本地方法；同样会抛出 StackOverflowError 和 OutOfMemoryError 异常。
+
+    - 虚拟机栈和本地方法栈区别：前者是为虚拟机执行 Java 方法（即字节码）服务，后者是为虚拟机使用到的 Native 方法服务。
+    - 虚拟机规范中对该部分没有强制规范， **Hotpot 虚拟机直接将本地方法栈和虚拟机栈合二为一**。
+
+- 堆（Heap）：在虚拟机启动时候创建，对所有线程共享，存放绝大部分的对象实例（部分会使用栈上分配，标量替换 技术存放在其他位置），Java 中不能直接使用对象，只能通过引用方式获取该对象然后使用它，引用作为一个变量是在栈中。
+
+    - 线程共享的 Java 堆中可以划分出多个线程私有的分配缓冲区（Thread Local Allocation Buffer,TLAB）
+
+    - Java 堆可以处于物理上不连续的内存空间中，只要逻辑上连续即可，一般都是可以扩展的；
+
+- 方法区：对所有线程共享，存储元信息，包括已被虚拟机加载的类信息、常量、静态变量、即使编译器编译后的代码、类中（Class ）固有的信息；在 Hotpot 中 **永久代（Permanent Generation）从 JDK 1.8 中已经废弃 **，并且永久代不等于方法区，Hotpot 虚拟机（其他虚拟机不存在永久代概念）使用永久代来实现方法区，即将 GC 分代收集器拓展到方法区，使得垃圾收集器可以像管理 Java 堆一样管理该部分内存，省去专门为方法区编写内存管理代码的工作。
+    - 运行时常量池（Runtime Constant Pool）：方法区的一部分，Class 文件中的常量池会存储编译期生成的字面值和符号引用，该部分内容在类加载后进入方法区的运行时常量池中存放，**运行时常量池相比 Class 文件常量池而言具有动态性**，因为 Java 并不要求常量一定只有编译期才能产生即并非只有预置在 Class 文件中常量池部分的内容才可以进入方法区运行时常量池，**运行期间也可以将新的常量池放入池中**，例如：String 类的 intern（） 方法；
+    
+- 直接内存：不是虚拟机运行时数据区的一部分，也不是 Java 虚拟机规范中定义的内存区域，即不是 JVM 管理的内存，与 Java NIO（New Input/Output） 密切相关，通过使用 Native 函数库直接分配堆外内存，由操作系统进行管理， JVM 通过存储在堆上的 DirectByteBuffer 对象作为该内存的引用来操作直接内存；
+
+# 二、Java 对象创建过程
+
+注：这里对象指普通 Java 对象，不包括数组和 Class 对象
+
+- 创建对象的方式
+    - 使用 new 关键字
+    - 使用 clone
+    - 通过反射
+    - 通过反序列化
+
+* new关键字创建对象的3个步骤:
+
+     * 在堆内存中创建出对象的实例
+
+        当虚拟机遇到一条 new 指令时候，首先虚拟机会检查该指令的参数能否在常量池中定位到一个类的符号引用，然后检查这个符号引用所代表的类是不是被正确的加载、连接、初始化，如果没有首先进行类加载过程。
+
+        当上述过程完成之后，虚拟机开始为新生对象分配内存（实际分配的内存空间在对象加载完成之后就确定了），为对象分配内存的任务相当于将一块确定大小的内存从 Java 堆中划分出来；在堆中为对象分配内存分为两种情况（堆内存空间分为已经被占用和未被占用两部分），【情况一（指针碰撞）：如果占用和未占用分别是两块连续空间，中间存放一个指针作为分界点的指示器】如果在未被占用的空间中为对象分配了一段的内存空间，则原来指向未被占用空间位置的指针发生偏移，指向下一个未被占用的空间位置（指针挪动的距离等价于分配的内存），这样对象就创建完成了；【情况二（空闲列表）：两块空间不连续】虚拟机会记录已被使用和未被使用的地址列表，以及未被使用的内存地址大小，如果需要为对象分配内存空间，则需要在未被使用的地址列表中选择一块可以容纳该对象的内存空间放置对象，然后在列表中将记录修改；
+
+        - 指针碰撞（Bump the Pointer）(前提是堆中的空间通过一个指针进行分割，一侧是已经被占用的空间，另一侧是未被占用的空间)
+        - 空闲列表(Free List)(前提是堆内存空间中已被使用与未被使用的空间是交织在一起的，这时，虚拟机就需要通过一个列表来记录哪些空间是可以使用的，哪些空间是已被使用的，接下来找出可以容纳下新创建对象的且未被使用的空间，在此空间存放该对象，同时还要修改列表上的记录)
+        - 为什么堆不确定是否平整：取决于堆所采用的垃圾收集器是否带有压缩整理功能；
+        - 针对并发情况下频繁创建对象可能带来的线程不安全问题（分配了内存但是指针没来得及修改，其他对象同时使用了原来的指针进行分配内存）：方法一：对分配内存空间的动作进行同步处理（虚拟机中采用 CAS 加上失败重试保证更新操作的原子性）；方法二：将内存分配的动作按照线程划分在不同的空间中进行，即每个线程在 Java 堆中预先分配一小块内存称为本地线程分配缓存（TLAB），哪个线程要分配内存时就在哪个线程的 TLAB 上进行分配，只有 TLAB 用完并分配新的 TLAB 时候才需要进行同步锁定，可以使用 `-XX:+/-UseTLAB`参数设定。
+
+     * 为对象的实例成员变量赋初值（对于静态变量在加载阶段就进行了赋初值），因为虚拟机在内存分配完成之后就会将分配到的内存空间都初始化为零值（不包括对象头）（若使用 TLAB，在分配 TLAB 时就执行该步骤），保证对象的实例字段可以在不赋初值情况下就可以使用。
+
+     * 虚拟机对对象进行必要的设置，如该对象为哪个类的实例、怎么找到类的元数据，对象的 Hash 码等，这些信息都存放在**对象的对象头**中，可以进行不同设置。至此对于虚拟机来说一个对象已经产生了，但是对于 Java 程序而言对象创建才刚刚开始，还需要执行 `<init>`方法，同时对字段进行赋值。
+
+     * 将对象的引用返回
+
+ * 对象在内存中的布局（即对象包含的信息）
+     * 对象头（Header）：例如对象的 Hash 码以及分代信息
+       * 一部分称为（Mark Word）用于存储自身的运行时的数据，如哈希码、GC 分代年龄、锁状态标志、线程持有的锁、偏向线程 ID，根据虚拟机位数不同占 32 / 64 bit，该部分数据结构不固定，会根据对象的状态复用自己的存储空间。
+       * 另一部分为：类型指针，即对象指向它的类元数据的指针（虚拟机通过该指针来确定这个对象是哪个类的实例），但是不是所有的虚拟机实现都必须在对象数据上保留类型指针；
+  * 另一部分：**只有数组对象有**，用于记录数组长度的数据，因为虚拟机可以通过普通 Java 对象的元数据信息确定 Java 对象的大小，但是从数据的元数据中却无法确定数组的大小。
+     * 实例数据（Instance Data）：即对象真正存储的有效信息，也是在程序代码中所定义的各种类型的字段内容（无论是从父类继承或者子类中定义的）。这里信息存储的顺序受虚拟机分配策略参数和字段在 Java 源码中定义顺序的影响；HotPot 虚拟机中默认的分配策略为：longs/doubles、ints、shorts/chars、bytes/booleans，oops(Ordinary Object Pointers)，其次父类中定义的变量在子类之前；
+     * 对齐填充（Padding）（非必须）：起到占位符作用，因为 Hotpot 中自动内存管理系统要求对象起始地址必须是 8 字节的整倍数（即对象的大小必须是 8 字节的整数倍）。
+     
+ * 对象的访问定位（引用访问对象的方式）
+     
+Java 程序需要通过栈上的 reference 数据来操作堆上的具体对象；
+     
+* 使用句柄的方式
+     
+        - 首先在堆中划分出一块内存来作为句柄池，reference 中存储的是对象的句柄地址，句柄分为两部分，一部分为该对象实例真正的指针，执行真正的对象实例数据信息，第二部分为类型数据各自的具体地址信息，元数据信息放置在方法区。
+        - 优势：reference 中存储的是稳定的句柄地址，当对象移动（如垃圾回收时候）时只会改变句柄中的实例数据指针，而 reference 本身不需要修改。
+     
+        ![通过句柄方式访问对象](Java%E5%86%85%E5%AD%98%E7%BB%93%E6%9E%84.resource/955ac97ce62d2deb57356f1aee43f33a.jpeg)
+     
+     * 使用直接指针的方式（Hotpot 使用方式）
+     
+        - Java 堆对象中放置访问类型数据的相关信息，reference 中存储的是对象地址。
+     
+        - 优势：速度更快，节省一次指针定位的时间开销（并且对象的访问在 Java 中非常频繁）。
+     
+        ![通过直接指针方式访问对象](Java%E5%86%85%E5%AD%98%E7%BB%93%E6%9E%84.resource/ee322420543cd38485ba6e1ae665ac82.jpeg)
+
+## 一、虚拟机堆内存溢出测试
+
+因为堆用于存储对象实例，所以通过不断的创建对象实例，并且保证 GC Roots 到对象之间有科大路径来避免垃圾回收机制清除这些对象。
 
 ```java
-/**
- * Created BY poplar ON 2019/11/25
- * 关于Java对象创建的过程:
- * new关键字创建对象的3个步骤:
- * 1.在堆内存中创建出对象的实例。
- * 2.为对象的实例成员变量赋初值。
- * 3.将对象的引用返回
- * 指针碰撞(前提是堆中的空间通过一个指针进行分割，一侧是已经被占用的空间，另一侧是未被占用的空间)
- * 空闲列表(前提是堆内存空间中已被使用与未被使用的空间是交织在一起的，这时，虚拟机就需要通过一个列表来记录哪些空间是可以使用的，
- * 哪些空间是已被使用的，接下来找出可以容纳下新创建对象的且未被使用的空间，在此空间存放该对象，同时还要修改列表上的记录)
- * 对象在内存中的布局:
- * 1.对象头.
- * 2.实例数据(即我们在一个类中所声明的各项信息)
- * 3.对齐填充(可选) !
- * 引用访问对象的方式:
- * 1.使用句柄的方式。
- * 2.使用直接指针的方式。
- */
-public class MemoryTest1 {
+  //-Xms5m -Xmx5m -XX:+HeapDumpOnOutOfMemoryError 设置jvm对空间最小和最大值（如果两值相同则堆不会自动扩展）以及遇到内存溢出异常时 Dump 出当前的内存堆转储快照，便于以后分析。
+package com.gjxaiou.memory;
+
+import java.util.ArrayList;
+import java.util.List;
+
+public class MyTest1 {
     public static void main(String[] args) {
-        //-Xms5m -Xmx5m -XX:+HeapDumpOnOutOfMemoryError 设置jvm对空间最小和最大以及遇到错误时把堆存储文件打印出来
-        //打开jvisualvm装在磁盘上的转存文件
-        List<MemoryTest1> list = new ArrayList<>();
+      
+        //打开jvisualvm 装在磁盘上的转存文件
+        List<MyTest1> list = new ArrayList<>();
         while (true) {
-            list.add(new MemoryTest1());
-            System.gc();
+            list.add(new MyTest1());
         }
     }
 }
 ```
 
-### 虚拟机栈溢出测试
+报错结果：
 
 ```java
+java.lang.OutOfMemoryError: Java heap space
+Dumping heap to java_pid20108.hprof ...
+Heap dump file created [2076951 bytes in 0.060 secs]
+Exception in thread "main" java.lang.OutOfMemoryError: Java heap space
+	at com.gjxaiou.memory.MyTest1.main(MyTest1.java:12)
+```
+
+==51 页==
+
+### （一）JVisualVM 使用
+
+直接在 cmd 控制台中输入 jvisualvm 即可开启
+
+![image-20191211162736253](Java%E5%86%85%E5%AD%98%E7%BB%93%E6%9E%84.resource/image-20191211162736253.png)
+
+![image-20191211163216509](Java%E5%86%85%E5%AD%98%E7%BB%93%E6%9E%84.resource/image-20191211163216509.png)
+
+如果在上面的代码中：` list.add(new MyTest1());` 调用 `System.gc()`;然后再次执行该程序，这时会在 JVisualVM 的左边本地进程中多一个该程序的进程，点击打开之后
+
+首先可以看到概述以及 JVM 参数
+
+![image-20191211164809109](Java%E5%86%85%E5%AD%98%E7%BB%93%E6%9E%84.resource/image-20191211164809109.png)
+
+然后可以在监视中查看，其他线程和抽样器均可以可视化的查看程序运行信息；
+
+![image-20191211164902563](Java%E5%86%85%E5%AD%98%E7%BB%93%E6%9E%84.resource/image-20191211164902563.png)
+
+# 二、虚拟机栈内存溢出测试(死锁)
+
+**下面
+
+```java
+package com.gjxaiou.memory;
+
 /**
- * Created BY poplar ON 2019/11/25
- * 虚拟机栈溢出测试
+ * 虚拟机栈溢出测试(使用递归)
+ * @Author GJXAIOU
+ * @Date 2019/12/11 16:53
  */
-public class MemoryTest2 {
 
+public class MyTest2 {
+    // 查看一共递归了多少层
     private int length;
-
     public int getLength() {
         return length;
     }
 
     public void test() throws InterruptedException {
         length++;
-        Thread.sleep(1);
+        Thread.sleep(300);
         test();
     }
 
     public static void main(String[] args) {
         //测试调整虚拟机栈内存大小为：  -Xss160k，此处除了可以使用JVisuale监控程序运行状况外还可以使用jconsole
-        MemoryTest2 memoryTest2 = new MemoryTest2();
+        MyTest2 myTest2 = new MyTest2();
         try {
-            memoryTest2.test();
+            myTest2.test();
+            // 注意：catch 捕捉的是 Throwable，不是 Exception，因为 STackOverflow 和 OutOfMemoryError 都不是 Exception 的子类
         } catch (Throwable e) {
-            System.out.println(memoryTest2.getLength());//打印最终的最大栈深度为：2587
+            //打印最终的最大栈深度为：2581
+            System.out.println(myTest2.getLength());
+            e.printStackTrace();
+        }
+    }
+}
+
+```
+
+程序运行时候同时打开 JvisualVM ，在 线程 选项右上角有一个 线程 Dump，可以查看所有线程的状态，这里主要看 Main 线程，可以由下图中看出该线程一直在调用 19行的 test() 方法，然后最后 返回了 26 行的调用方法，其他的监视、线程等等也可以查看；
+
+![image-20191211171420096](Java%E5%86%85%E5%AD%98%E7%BB%93%E6%9E%84.resource/image-20191211171420096.png)
+
+### （一）JConsole 使用
+
+同样在控制台中使用 `jconsole`命名来启动（提前启动项目），然后本地连接到该项目即可监控程序，**特色**：可以在线程选项框最下面检查程序是否存在死锁；
+
+```java
+package com.gjxaiou.memory;
+
+/**
+ * @Author GJXAIOU
+ * @Date 2019/12/11 18:03
+ */
+public class MyTest3 {
+    public static void main(String[] args) {
+        // 构造两个线程
+        // 步骤一：Thread-A 线程启动，执行 A.method（）方法，然后就会拿到类 A 对应的 Class 对象的锁，同时执行方法，睡眠，当执行到 B.method() 方法时候，发现该方法也是 synchronized 的，所以会尝试获取类 B 对应的 Class 对象对应的锁；
+        new Thread(() -> A.method(), "Thread-A").start();
+        //步骤二：同时 Thread-B 线程启动，同上步骤就会形成死锁
+        new Thread(() -> B.method(), "Thread-B").start();
+    }
+}
+
+class A{
+    // 线程进入到 synchronized 修饰的方法后，并且该方法是由 static 修饰的，则持有的不是当前类（Class A）对应的锁，而是当前类所对应的 Class
+    // 对象的锁，所以不管该类有多少个实例或者对象，持有的都是一把锁
+    public static synchronized  void method(){
+        System.out.println("method from A");
+        try {
+            Thread.sleep(5000);
+            B.method();
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+    }
+}
+
+class B{
+    public static synchronized void method(){
+        System.out.println("method from B");
+        try {
+            Thread.sleep(5000);
+            A.method();
+        } catch (InterruptedException e) {
             e.printStackTrace();
         }
     }
 }
 ```
 
-### 元空间溢出测试
+
+
+程序对应的监测结果为：首先通过线程栏正下方的 “检测死锁” 之后结果如下：
+
+状态可以看出：`java.lang.Class`上的 Blocked，拥有者是 Thread-B，说明线程 Thread-B 已经持有了 `java.lang.Class@77552c4c` 这个对象的锁，所以 Thread-A 在这个对象上处于阻塞状态；因为调用的是 `B.method()`所以等待的是 B 类对应的 Class 对象的锁。
+
+![image-20191211182158268](Java%E5%86%85%E5%AD%98%E7%BB%93%E6%9E%84.resource/image-20191211182158268.png)
+
+同样在 JVisualVM 中会自动提示检测到死锁，并且按照提示在线程选项中生成一个线程 Dump，然后查看上面的两个线程，发现他们分别已经锁定了自己的 Class 对象，想锁定对方的 Class 对象；
+
+![image-20191211183809571](Java%E5%86%85%E5%AD%98%E7%BB%93%E6%9E%84.resource/image-20191211183809571.png)
+
+
+
+## 三、方法区元空间溢出测试
+
+因为从 1.8 开始废除永久代，使用元空间，因为元空间采用的是操作系统本地的内存，初始内存大小为 21 M，并且如果不断占用达到空间最大内存大小则元空间虚拟机会进行垃圾回收，如果回收还是不够就会进行内存扩展，最大可以扩展到物理内存最大值；
+
+首先需要显式的设定初始元空间大小，同时因为元空间中存放一个类的 Class 的元信息（并不存放最占空间的对象实例）， 因此需要不断将 Class 信息不断的增加到元空间中，例如在 Spring （jsp 会动态转为 Servlet，CGlib 等等同理）中会在运行期动态的生成类（就是该类在编译时候是不存在的，在运行期动态创建），这些动态创建类的元信息就要放在元空间中，因此需要不断的动态创建类。
 
 ```java
+package com.gjxaiou.memory;
+import net.sf.cglib.proxy.Enhancer;
+import net.sf.cglib.proxy.MethodInterceptor;
 /**
- * Created BY poplar ON 2019/11/26
- * 元空间内存溢出测试
- * 设置元空间大小：-XX:MaxMetaspaceSize=100m
+ * @Author GJXAIOU
+ * @Date 2019/12/11 19:00
+ */
+
+/**
+ * 元空间内存溢出测试(使用 cglib,需要导入对应 jar 包和 asm.jar)
+ * 设置元空间最大大小（不让其扩容）：-XX:MaxMetaspaceSize=200m
  * 关于元空间参考：https://www.infoq.cn/article/java-permgen-Removed
  */
-public class MemoryTest3 {
+public class MyTest4 {
     public static void main(String[] args) {
-        //使用动态代理动态生成类
+        //使用动态代理动态生成类（不是实例）
         while (true) {
             Enhancer enhancer = new Enhancer();
-            enhancer.setSuperclass(MemoryTest3.class);
+            enhancer.setSuperclass(MyTest4.class);
             enhancer.setUseCache(false);
             enhancer.setCallback((MethodInterceptor) (obj, method, ags, proxy) -> proxy.invokeSuper(obj, ags));
             System.out.println("Hello World");
-            enhancer.create();// java.lang.OutOfMemoryError: Metaspace
+            // 在运行期不断创建 MyTest 类的子类
+            enhancer.create();
         }
     }
+}
+/** output:
+ * Caused by: java.lang.OutOfMemoryError: Metaspace
+ */
+
 ```
 
-### JVM命令使用
+从 Jconsole 中可以看出，只有类是不断增加的
+
+![image-20191211193600512](Java%E5%86%85%E5%AD%98%E7%BB%93%E6%9E%84.resource/image-20191211193600512.png)
+
+使用 JVisualVM 可以查看元空间增长情况
+
+![image-20191211193944968](Java%E5%86%85%E5%AD%98%E7%BB%93%E6%9E%84.resource/image-20191211193944968.png)
+
+### 四、JVM命令使用
+
+查看当成程序进程号： ps -ef | grep java（获取所有包含 java 的进程及其 id）**建议使用**：`jsp -l`
 
 ```java
-/**
- * Created BY poplar ON 2019/11/26
- * jmam命令的使用 -clstats<pid>进程id  to print class loader statistics
- * jmap -clstats 3740
- *
- * jstat -gc 3740
- *  S0C    S1C    S0U    S1U      EC       EU        OC         OU       MC     MU    CCSC   CCSU   YGC     YGCT    FGC    FGCT     GCT
- * 512.0  512.0   0.0    0.0   24064.0   9626.0   86016.0     1004.1   4864.0 3758.2 512.0  409.1     144    0.064   0      0.000    0.064
- * MC元空间总大小，MU元空间已使用的大小
- */
-public class MemoryTest4 {
-    public static void main(String[] args) {
-        while (true)
-            System.out.println("hello world");
-    }
-    //查看java进程id jps -l
-    // 使用jcmd查看当前进程的可用参数：jcmd 10368 help
-    //查看jvm的启动参数 jcmd 10368 VM.flags
-   // 10368:-XX:CICompilerCount=3 -XX:InitialHeapSize=132120576 -XX:MaxHeapSize=2111832064 -XX:MaxNewSize=703594496
-    // -XX:MinHeapDeltaBytes=524288 -XX:NewSize=44040192 -XX:OldSize=88080384 -XX:+UseCompressedClassPointers
-    // -XX:+UseCompressedOops -XX:+UseFastUnorderedTimeStamps -XX:-UseLargePagesIndividualAllocation -XX:+UseParallelGC
+package com.gjxaiou.memory;
 
+/**
+ * @Author GJXAIOU
+ * @Date 2019/12/11 20:20
+ */
+public class MyTest5 {
+    public static void main(String[] args) {
+        while (true) {
+            System.out.println("hello world");
+        }
+    }
 }
 ```
 
-### JVM常用命令
+- 使用 `jmap -clstats` + pid 结果如下：
+
+![image-20191211205050818](Java%E5%86%85%E5%AD%98%E7%BB%93%E6%9E%84.resource/image-20191211205050818.png)
 
 ```java
-jcmd (从JDK 1. 7开始增加的命令)
-1. jcmd pid VM.flags: 查看JVM的启动参数
-2. jcmd pid help: 列出当前运行的Java进程可以执行的操作
-3. jcmd pid helpJFR.dump:查看具体命令的选项
-4. jcmd pid PerfCounter.print:看JVm性能相关的参数
-5. jcmd pid VM.uptime:查有JVM的启动时长
-6. jcmd pid GC.class_ histogram: 查看系统中类的统计信息
-7. jcmd pid Thread.print: 查看线程堆栈信息
-8. jcmd pid GC.heap dump filename 导出Heap dump文件， 导出的文件可以通过jvisualvm查看
-9. jcmd pid VM.system_ properties:查看JVM的属性信息
+C:\Users\gjx16>jmap -clstats 17992
+Attaching to process ID 17992, please wait...
+Debugger attached successfully.
+Server compiler detected.
+JVM version is 25.221-b11
+finding class loader instances ..done.
+computing per loader stat ..done.
+please wait.. computing liveness.liveness analysis may be inaccurate ...
+class_loader    classes bytes   parent_loader   alive?  type
+
+<bootstrap>     606     1134861   null          live    <internal>
+0x00000006c24ba258      0       0       0x00000006c2404b38      dead    java/util/ResourceBundle$RBClassLoader@0x00000007c00648a8
+0x00000006c2404b38      4       5070    0x00000006c2404ba8      live    sun/misc/Launcher$AppClassLoader@0x00000007c000f958
+0x00000006c2404ba8      0       0         null          live    sun/misc/Launcher$ExtClassLoader@0x00000007c000fd00
+
+total = 4       610     1139931     N/A         alive=3, dead=1     N/A
 ```
+
+- 使用 `jmap -heap` + pid 查看堆中状况
+
+```java
+C:\Users\gjx16>jmap -heap 5816
+Attaching to process ID 5816, please wait...
+Debugger attached successfully.
+Server compiler detected.
+JVM version is 25.221-b11
+
+using thread-local object allocation.
+Parallel GC with 10 thread(s)
+
+Heap Configuration:
+   MinHeapFreeRatio         = 0
+   MaxHeapFreeRatio         = 100
+   MaxHeapSize              = 4257218560 (4060.0MB)
+   NewSize                  = 88604672 (84.5MB)
+   MaxNewSize               = 1418723328 (1353.0MB)
+   OldSize                  = 177733632 (169.5MB)
+   NewRatio                 = 2
+   SurvivorRatio            = 8
+   MetaspaceSize            = 21807104 (20.796875MB)
+   CompressedClassSpaceSize = 1073741824 (1024.0MB)
+   MaxMetaspaceSize         = 17592186044415 MB
+   G1HeapRegionSize         = 0 (0.0MB)
+
+Heap Usage:
+PS Young Generation
+Eden Space:
+   capacity = 48758784 (46.5MB)
+   used     = 11702160 (11.160049438476562MB)
+   free     = 37056624 (35.33995056152344MB)
+   24.000106319304436% used
+From Space:
+   capacity = 524288 (0.5MB)
+   used     = 0 (0.0MB)
+   free     = 524288 (0.5MB)
+   0.0% used
+To Space:
+   capacity = 1572864 (1.5MB)
+   used     = 0 (0.0MB)
+   free     = 1572864 (1.5MB)
+   0.0% used
+PS Old Generation
+   capacity = 177733632 (169.5MB)
+   used     = 1155216 (1.1016998291015625MB)
+   free     = 176578416 (168.39830017089844MB)
+   0.6499704006498894% used
+
+3158 interned Strings occupying 259480 bytes.
+```
+
+- 使用 `jstat -gc` + pid 查看元空间容量和被使用量
+
+![image-20191211205017818](Java%E5%86%85%E5%AD%98%E7%BB%93%E6%9E%84.resource/image-20191211205017818.png)
+
+```java
+C:\Users\gjx16>jstat -gc 14320
+ S0C    S1C    S0U    S1U      EC       EU        OC         OU       MC     MU    CCSC   CCSU   YGC     YGCT    FGC    FGCT     GCT
+1536.0 1536.0  0.0    0.0   48640.0   8755.1   173568.0    1061.0   4864.0 3763.1 512.0  409.7      19    0.013   0      0.000    0.013
+```
+
+其中 MC表示元空间总大小，MU表示元空间已使用的大小；
+
+- jcmd (从JDK 1. 7开始增加的命令)
+
+| 命令                                             | 含义                                                 |
+| ------------------------------------------------ | ---------------------------------------------------- |
+| jcmd pid VM.flags                                | 查看该线程的JVM 的启动参数                           |
+| jcmd pid help                                    | 列出当前运行的 Java 进程可以执行的操作               |
+| jcmd pid help 具体命令                           | 查看具体命令的选项                                   |
+| jcmd pid PerfCounter.print                       | 查看具体命令的选项                                   |
+| jcmd pid VM.uptime                               | 查有JVM的启动时长                                    |
+| jcmd pid GC.class_ histogram                     | 查看系统中类的统计信息                               |
+| jcmd pid Thread.print                            | 查看线程堆栈信息                                     |
+| jcmd pid GC.heap_dump filename.hprof(可以加路径) | 导出 Heap dump文件， 导出的文件可以通过jvisualvm查看 |
+| jcmd pid VM.system_ properties                   | 查看 JVM 的属性信息                                  |
+| jcmd pid VM.version                              | 查看目标 JVM 进程的版本信息                          |
+| jcmd pid VM.command_line                         | 查看 JVM 启动的命令行参数信息                        |
+
+- jstack ：可以查看或者导出 Java 应用程序中线程的堆栈信息  `jstack pid`
+
+- **jmc**（Java Mission Control）:页面式的查看工具，可以安装插件
+
+    - 使用命令行开启
+    - 功能更加齐全，界面更加优秀
+
+    注：jfr（Java Flight Recoder）Java 飞行记录器：可以实时获取 Java 进程的统计数据
+
+- JVisualVM 中有 OQL 对象查询语言，类似于 SQL 语句，可以查询一些值；
 
 ### JVM内存举例说明
 
-
-
 ```java
-   public void method() {
-        Object object = new Object();
+public void method() {
+    Object object = new Object();
 
-        /*生成了2部分的内存区域，1)object这个引用变量，因为
+    /*生成了2部分的内存区域，1)object这个引用变量，因为
         是方法内的变量，放到JVM Stack里面,2)真正Object
         class的实例对象，放到Heap里面
         上述 的new语句一共消耗12个bytes, JVM规定引用占4
         个bytes (在JVM Stack)， 而空对象是8个bytes(在Heap)
         方法结束后，对应Stack中的变量马上回收，但是Heap
         中的对象要等到GC来回收、*/
-    }
-```
-
-### JVM垃圾识别（根搜索算法( GC RootsTracing )）
-
-- 在实际的生产语言中(Java、 C#等)，都是使用根搜索算法判定对象是否存活。
-- 算法基本思路就是通过一系列的称为“GCRoots"的点作为起始进行向下搜索，当一个对象到GCRoots没有任何引用链( Reference Chain)相连，则证明此对象 是不可用的
-- 在Java语言中，GC Roots包括 ●在VM栈(帧中的本地变量)中的引用 ●方法区中的静态引用 ●JNI (即一般说的Native方法) 中的引用
-
-### 方法区
-
-- Java虛拟机规范表示可以不要求虚拟机在这区实现GC,这区GC的“性价比”一般比较低 在堆中，尤其是在新生代，常规应用进行I次GC一般可以回收70%~95%的空间，而方法区的GC效率远小于此
-- 当前的商业JVM都有实现方法区的GC,主要回收两部分内容:废弃常量与无用类
-- 主要回收两部分内容:废弃常量与无用类
-- 类回收需要满足如下3个条件：
-    - 该类所有的实例都已经被GC,也就是JVM中不存在该Class的任何实例
-    - 加载该类的ClassL oader已经被GC
-    - 该类对应的java.lang.Class对象没有在任何地方被引用，如不能在任何地方通过反射访问该类的方法
-- 在大量使用反射、动态代理、CGLib等字节码框架、动态生成JSP以及OSGi这类频繁自定义Classloader的场景都需要JVM具备类卸载的支持以保证方法区不会溢出
-
-### 垃圾判断与GC算法
-
-- 垃圾判断的算法
-    - 引用计数算法(Reference Counting)
-    - 根搜索算法( GC RootsTracing )
-    - 在实际的生产语言中(Java、 C#等)都是使用根搜索算法判定对象是否存活
-    - 算法基本思路就是通过一一系列的称为GCRoots"的点作为起始进行向下搜索，当一个对象到GC Roots没有任何引用链(Reference Chain)相连，则证明此对象是不可用的
-- 在Java语言中，可作为GC Roots的对象包括下面几种：
-    - 虚拟机栈（栈帧中的本地变量表）中引用的对象。
-    - 方法区中类静态属性引用的对象。
-    - 方法区中常量引用的对象。
-    - 本地方法栈中JNI（即一般说的Native方法）引用的对象
-
-[![根搜索算法(Root Tracing)](https://github.com/weolwo/jvm-learn/raw/master/src/resources/images/gcroot.png)](https://github.com/weolwo/jvm-learn/blob/master/src/resources/images/gcroot.png)
-
-- 标记-清除算法(Mark Sweep)
-- 标记-整理算法(Mark-Compact)
-- 复制算法(Copying)
-- 分代算法(Generational)
-
-### 标记一清除算法(Mark-Sweep)
-
-- 算法分为“标记”和“清除”两个阶段， 首先标记出所有需要回收的对象，然后回 收所有需要回收的对象
-
-- 缺点 效率问题，标记和清理两个过程效率都不高 空间问题， 标记清理之后会产生大量不连续的内存碎片，空间碎片太多可能会导致后续使用中无法找到足够的连续内存而提前触发另一次的垃圾搜集动作
-
-- 效率不高，需要扫描所有对象。堆越大，GC越慢 存在内存碎片问题。GC次数越多，碎片越为严重
-
-    [![标记一清除算法(Mark-Sweep)](https://github.com/weolwo/jvm-learn/raw/master/src/resources/images/1574823017674.gif)](https://github.com/weolwo/jvm-learn/blob/master/src/resources/images/1574823017674.gif)
-
-### 复制(Copying) 搜集算法
-
-- 将可用内存划分为两块，每次只使用其中的一块，当一半区内存用完了，仅将还存活 的对象复制到另外一块上面，然后就把原来整块内存空间一次性清理掉，
-- 这样使得每次内存回收都是对整个半区的回收，内存分配时也就不用考虑内存碎片等复杂情况，只要移动堆顶指针，按顺序分配内存就可以了，实现简单，运行高效。只是这种算法的代价是将内存缩小为原来的一半，代价高昂
-- 现在的商业虚拟机中都是用了这一种收集算法来回收新生代
-- 将内存分为一块较大的eden空间和2块较少的survivor空间，每次使用eden和其中一块 survivor, 当回收时将eden和survivor还存活的对象一次性拷 贝到另外一块survivor空间上，然后清理掉eden和用过的survivor
-- Oracle Hotspot虚拟机默认eden和survivor的大小比例是8:1，也就是每次只有10%的内存是“浪费”的
-- 复制收集算法在对象存活率高的时候，效率有所下降
-- 如果不想浪费50%的空间，就需要有额外的空间进行分配担保用于应付半区内存中所有对象都100%存活的极端情况，所以在老年代一般不能直接选用这种算法
-
-[![复制(Copying) 搜集算法](https://github.com/weolwo/jvm-learn/raw/master/src/resources/images/1574824343266.gif)](https://github.com/weolwo/jvm-learn/blob/master/src/resources/images/1574824343266.gif)
-
-- 只需要扫描存活的对象，效率更高
-- 不会产生碎片
-- 需要浪费额外的内存作为复制区
-- 复制算法非常适合生命周期比较短的对象，因为每次GC总能回收大部分的对象，复制的开销比较小
-- 根据IBM的专i研究，98%的Java对象只会存活1个GC周期，对这些对象很适合用复制算法。而且 不用1: 1的划分工作区和复制区的空间
-
-### 标记一整理( Mark-Compact )算法
-
-- 标记过程仍然样，但后续步骤不是进行直接清理，而是令所有存活的对象一端移动，然后直接清理掉这端边界以外的内存。
-- 没有内存碎片
-- 比Mark-Sweep耗费更多的时间进行compact
-
-### 分代收集。( GenerationalCollecting)算法
-
-- 当前商业虚拟机的垃圾收集都是采用“分代收集”( Generational Collecting)算法，根据对象不同的存活周期将内存划分为几块。
-- 一般是把Java堆分作新生代和老年代，这样就可以根据各个年代的特点采用最适当的收集算法，譬如新生代每次GC都有大批对象死去，只有少量存活，那就选用复制算法，只需要付出少量存活对象的复制成本，就可以完成收集。
-
-### Hotspot JVM 6中共划分为三个代:
-
-- 年轻代(Young Generation)
-- 老年代(Old Generation)和
-- 永久代( Permanent Generation)
-
-[![Hotspot JVM 6中共划分为三个代](https://github.com/weolwo/jvm-learn/raw/master/src/resources/images/drrrr.png)](https://github.com/weolwo/jvm-learn/blob/master/src/resources/images/drrrr.png)
-
-- 年轻代(Young Generation) 新生成的对象都放在新生代。年轻代用复制算法进行GC (理论上年轻代对象的生命周期非常短，所以适合复制算法)
-- 年轻代分三个区。一个Eden区，两个Survivor区(可以通过参数设置Survivor个数)。对象在Eden区中生成。当Eden区满时，还存活的对象将被复制到一个Survivor区，当这个Survivor区满时，此区的存活对象将被复制到另外一个Survivor区，当第二个Survivor区也满了的时候，从第一个Survivor区复制过来的并且此时还存活的对象，将被复制到老年代。2个Survivor是完全对称，轮流替换。
-- Eden和2个Survivor的缺省比例是8:1:1，也就是10%的空间会被 浪费。可以根据GClog的信息调整大小的比例
-- 老年代(Old Generation)
-    - 存放了经过一次或多次GC还存活的对象
-    - 一般采用Mark-Sweep或者Mark-Compact算法进行GC
-    - 有多种垃圾收集器可以选择。每种垃圾收集器可以看作一个GC算法的具体实现。可以根据具体应用的需求选用合适的垃圾收集器(追求吞吐量?追求最短的响应时间?)
-- ~~永久代~~
-    - 并不属于堆(Heap).但是GC也会涉及到这个区域
-    - 存放了每个Class的结构信息， 包括常量池、字段描述、方法描述。与垃圾收集要收集的Java对象关系不大
-
-### 内存分配与回收
-
-- 堆上分配 大多数情况在eden上分配，偶尔会直接在old上分配细节取决于GC的实现
-- 栈上分配 原子类型的局部变量
-- GC要做的是将那些dead的对象所占用的内存回收掉
-    - Hotspot认为没有引用的对象是dead的
-    - Hotspot将引用分为四种: Strong、 Soft、Weak、Phantom Strong 即默认通过Object o=new Object()这种方式赋值的引用 Soft、Weak、 Phantom这 三种则都是继承Reference
-- 在Full GC时会对Reference类型的引用进行特殊处理
-    - Soft:内存不够时一定会被GC、长期不用也会被GC
-    - Weak: - 定会被GC， 当被mark为dead, 会在ReferenceQueue中通知
-    - Phantom: 本来就没引用，当从jvm heap中释放时会通知
-
-垃圾回收器
-
-[![垃圾回收器](https://github.com/weolwo/jvm-learn/raw/master/src/resources/images/qqq.png)](https://github.com/weolwo/jvm-learn/blob/master/src/resources/images/qqq.png)
-
-### GC回收的时机
-
-- 在分代模型的基础上，GC从时机上分为两种: Scavenge GC和Full GC
-    - Scavenge GC (Minor GC) 触发时机:新对象生成时，Eden空间满了理论上Eden区大多数对象会在ScavengeGC回收，复制算法的执 行效率会很高，ScavengeGC时间比较短。
-    - Full GC 对整个JVM进行整理，包括Young、Old 和Perm主要的触发时机: 1) Old满了2) Perm满了3) system.gc()效率很低，尽量减少Full GC。
-
-### 垃圾回收器(Garbage Collector)
-
-- 分代模型: GC的宏观愿景;
-- 垃圾回收器: GC的具体实现
-- Hotspot JVM提供多种垃圾回收器，我们需要根据具体应用的需要采用不同的回收器
-- 没有万能的垃圾回收器，每种垃圾回收器都有自己的适用场景
-
-### 垃圾收集器的‘并行”和并发
-
-- 并行(Parallel):指多个收集器的线程同时工作，但是用户线程处于等待状态
-- 并发(Concurrent):指收集器在工作的同时，可以允许用户线程工作。并发不代表解决了GC停顿的问题，在关键的步骤还是要停顿。比如在收集器标记垃圾的时候。但在清除垃圾的时候，用户线程可以和GC线程并发执行。
-
-### Serial收集器
-
-- 最早的收集器，单线程进行GC， New和Old Generation都可以使用，在新生代，采用复制算法;
-- 在老年代，采用Mark-Compact算法因为是单线程GC，没有多线程切换的额外开销，简单实用 Hotspot Client模式默认的收集器
-
-[![Serial收集器](https://github.com/weolwo/jvm-learn/raw/master/src/resources/images/serial.png)](https://github.com/weolwo/jvm-learn/blob/master/src/resources/images/serial.png)
-
-### ParNew收集器
-
-- ParNew收集器就是Serial的多线程版本，除了使用多个收集线程外，其余行为包括算法、STW、对象分配规则、回收策略等都与Seria收集器一模一样。
-- 对应的这种收集器是虚拟机运行在Server模式的默认新生代收集器，在单CPU的环境中，ParNew收集器并不会比Serial收集器有更好的效果
-- Serial收集器在新生代的多线程版本
-- 使用复制算法(因为针对新生代)只有在多CPU的环境下，效率才会比Serial收集器高
-- 可以通过-XX:ParallelGC Threads来控制GC线程数的多少。需要结合具体CPU的个数Server模式下新生代的缺省收集器
-
-[![ParNew收集器](https://github.com/weolwo/jvm-learn/raw/master/src/resources/images/parnew.png)](https://github.com/weolwo/jvm-learn/blob/master/src/resources/images/parnew.png)
-
-### Parallel Scavenge收集器
-
-- Parallel Scavenge收集器也是一个多线程收集器，也是使用复制算法，但它的对象分配规则与回收策略都与ParNew收集器有所不同，它是以吞吐量最大化(即GC时间占总运行时间最小)为目标的收集器实现，它允许较长时间的STW换取总吞吐量最大化
-
-### CMS ( Concurrent Mark Sweep )收集器
-
-- CMS是一种以最短停顿时间为目标的收集器，使用CMS并不能达到GC效率最高(总体GC时间最小)，但它能尽可能降低GC时服务的停顿时间，CMS收集器使用的是标记一清除算法
-- 特点：
-    - 追求最短停顿时间，非常适合Web应用
-    - 只针对老年区，一般结合ParNew使用
-    - Concurrent, GC线程和用户线程并发工作(尽量并发 )
-    - Mark-Sweep
-    - 只有在多CPU环境下才有意义
-    - 使用-XX:+UseConcMarkSweepGC打开
-- CMS收集器的缺点
-    - CMS以牺牲CPU资源的代价来减少用户线程的停顿。当CPU个数少于4的时候，有可能对吞吐量影响非常大
-    - CMS在并发清理的过程中，用户线程还在跑。这时候需要预留一部分空间给用户线程
-    - CMS用Mark-Sweep,会带来碎片问题。碎片过多的时候会容易频繁触发FullGC
-
-[![CMS收集器](https://github.com/weolwo/jvm-learn/raw/master/src/resources/images/cms.png)](https://github.com/weolwo/jvm-learn/blob/master/src/resources/images/cms.png)
-
-### G1收集器
-
-[![G1](https://github.com/weolwo/jvm-learn/raw/master/src/resources/images/G1.png)](https://github.com/weolwo/jvm-learn/blob/master/src/resources/images/G1.png)
-
-- heap被划分为一个个相等的不连续的内存区域(regions) ，每个region都有一个分代的角色: eden、 survivor、 old
-- 对每个角色的数量并没有强制的限定，也就是说对每种分代内存的大小，可以动态变化
-- G1最大的特点就是高效的执行回收，优先去执行那些大量对象可回收的区域(region)
-- G1使用了gc停顿可预测的模型，来满足用户设定的gc停顿时间，根据用户设定的目标时间，G1会自动地选择哪些region要清除，次清除多少个region
-- G1从多个region中复制存活的对象，然后集中放入一个region中，同时整理、清除内存(copying收集算法)
-- 对比使用mark-sweep的CMS, G1使用的copying算法不会造成内存碎片;
-- 对比Parallel Scavenge(基于copying )、Parallel Old收集器(基于mark-compact-sweep)，Parallel会对整个区域做整理导致gc停顿会比较长，而G1只是特定地整理几个region。
-- G1并非一个实时的收集器，与parallelScavenge-样，对gc停顿时间的设置并不绝对生效，只是G1有较高的几率保证不超过设定的gc停顿时间。与之前的gc收集器对比，G1会根据用户设定的gc停顿时间，智能评估哪几个region需要被回收可以满足用户的设定
-
-### 分区(Region):
-
-- G1采取了不同的策略来解决并行、串行和CMS收集器的碎片、暂停时间不可控等问题一G1将 整个堆分成相同大小的分区(Region)
-- 每个分区都可能是年轻代也可能是老年代，但是在同，时刻只能属于某个代。年轻代、幸存区、老年代这些概念还存在，成为逻辑上的概念，这样方便复用之前分代框架的逻辑。
-- 在物理，上不需要连续，则带来了额外的好处有的分区内垃圾对象特别多，有的分区内垃圾对象很少，G1会优先回收垃圾对象特别多的分区，这样可以花费较少的时间来回收这些分区的垃圾，这也就是G1名字的由来，即首先收集垃圾最多的分区。
-- 依然是在新生代满了的时候，对整个新生代进行回收整个新生代中的对象，要么被回收、要么晋升，至于新生代也采取分区机制的原因，则是因为这样跟老年代的策略统一，方便调整代的大小
-- G1还是一种带压缩的收集器，在回收老年代的分区时，是将存活的对象从一个分区拷贝到另一个可用分区，这个拷贝的过程就实现了局部的压缩。
-
-### 收集集合(CSet)
-
-- 一组可被回收的分区的集合。在CSet中存活的数据会在GC过程中被移动到另一个可用分区，CSet中的分区可以来自eden空间、survivor空间、 或者老年代
-
-### 已记忆集合(RSet) :
-
-- RSet记录了其他Region中的对象引用本Region中对象的关系，属于points-into结构( 谁引用了我的对象)RSet的价值在于使得垃圾收集器不需要扫描整个堆找到谁引用了当前分区中的对象，只需要扫描RSet即可。
-- Region1和Region3中的对象都引用了Region2中的对象，因此在Region2的RSet中记录了这两个引用。
-
-[![img](https://github.com/weolwo/jvm-learn/raw/master/src/resources/images/region.png)](https://github.com/weolwo/jvm-learn/blob/master/src/resources/images/region.png)
-
-- G1 GC是在points-out的card table之上再加了一层结构来构成points-into RSet:每个region会记录下到底哪些别的 region有指向自己的指针，而这些指针分别在哪些card的范围内。
-- 这个RSet其实是一个hash table,key是别的region的起始地址，value是一个集合，里面的元素是card table的index. 举例来说，如果region A的RSet里有一项的key是region B，value里有index为1234的card,它的意思就是region B的 一个card里 有引用指向region A。所以对region A来说，该RSet记录的是points-into的关系;而card table仍然记录了points-out的关系。
-- Snapshot-AtThe-Beginning(SATB):SATB是G1 GC在并发标记阶段使用的增量式的标记算法，
-- 并发标记是并发多线程的，但并发线程在同一时刻只扫描一个分区
-
-### 参考链接：https://www.oracle.com/technetwork/tutorials/tutorials-1876574.html
-
-### G1相对于CMS的优势
-
-- G1在压缩空间方面有优势
-- G1通过将内存空间分成区域(Region) 的方式避免内存碎片问题Eden、Survivor、 Old区不再固定，在内存使用效率上来说更灵活
-- G1可以通过设置预期停顿时间( Pause Time) 来控制垃圾收集时间，避免应用雪崩现象
-- G1在回收内存后会马上同时做合并空闲内存的工作，而CMS默认是在STW ( stop the world) 的时候做
-- G1会在Young GC中使用，而CMS只能在Old区使用
-
-### G1的适合场景
-
-- 服务端多核CPU、JVM内存占用较大的应用
-- 应用在运行过程中会产生大量内存碎片、需要经常压缩空间
-- 想要更可控、可预期的GC停顿周期:防止高并发下应用的雪崩现象
-
-### G1 GC模式
-
-- G1提供了两种GC模式，Young GC和Mixed GC, 两种都是完全Stop The World的
-- Young GC:选定所有年轻代里的Region。通过控制年轻代的Region个数，即年轻代内存大小，来控制Young GC的时间开销。
-- Mixed GC:选定所有年轻代里的Region,外加根据global concurrent marking统计得出收集收益高的若干老年代Region。在用户指定的开销目标范围内尽可能选择收益高的老年代Region
-- Mixed GC不是Full GC,它只能回收部分老年代的Region,如果Mixed GC实在无法跟上程序分配内存的速度，导致老年代填满无法继续进行MixedGC，就会使用serialold GC (Full GC)来收集整个GC heap。 所以本质上，G1是不提供Full GC的
-
-### global concurrent marking
-
-- **初始标记( initial mark, STW)** :它标记了从GCRoot开始直接可达的对象。
-- **并发标记( Concurrent Marking)** :这个阶段从GC Root开始对heap中的对象进行标记，标记线 程与应用程序线程并发执行，并且收集各个Region的存活对象信息。
-- **重新标记( Remark, STW)** :标记那些在并发标记阶段发生变化的对象，将被回收。
-- **清理(Cleanup)** :清除空Region (没有存活对象的)，加入到free list。
-- 第一阶段initial mark是共用了Young GC的暂停，这是因为他们可以复用rootscan操作，所以可以说global concurrent marking是伴随Young GC而发生的
-- 第四阶段Cleanup只是回收了没有存活对象的Region，所以它并不需要STW。
-
-### G1在运行过程中的主要模式
-
-- YGC(不同于CMS)
-    - G1 YGC在Eden充满时触发，在回收之后所有之前属于Eden的区块全部变成空白，即不属于任何一个分区( Eden、Survivor、Old )
-    - YGC执行步骤：
-        - 阶段1:根扫描 静态和本地对象被描
-        - 阶段2:更新RS 处理dirty card队列更新RS
-        - 阶段3:处理RS 检测从年轻代指向老年代的对象
-        - 阶段4:对象拷贝 拷贝存活的对象到survivor/old区域
-        - 阶段5:处理引用队列 软引用，弱引用，虚引用处理
-- 并发阶段（global concurrent marking）
-- 混合模式
-- Full GC (一 般是G1出现问题时发生，本质上不属于G1，G1进行的回退策略（回退为：Serial Old GC）)
-
-### 什么时候发生MixedGC?
-
-- 由一些参数控制，另外也控制着哪些老年代Region会被选入CSet (收集集合)
-    - **G1HeapWastePercent**:在globalconcurrent marking结束之后，我们可以知道oldgenregions中有多少空间要被回收，在每次YGC之后和再次发生MixedGC之前，会检查垃圾占比是否达到此参数，只有达到了，下次才 会发生Mixed GC
-    - **G1MixedGCLiveThresholdPercent**: oldgeneration region中的存活对象的占比，只有在此参数之下，才会被选入CSet
-    - **G1MixedGCCountTarget**:一 次globalconcurrent marking之后，最多执行Mixed GC的次数
-    - **G1OldCSetRegionThresholdPercent**:次Mixed GC中能被选入CSet的最多old generation region数量
-
-### 三色标记算法
-
-提到并发标记，我们不得不了解并发标记的三色标记算法。它是描述追踪式回收器的一种有效的方法，利用它可以推演回收器的正确性
-
-- 我们将对象分成三种类型:
-    - **黑色**:根对象，或者该对象与它的子对象都被扫描过(对象被标记了，且它的所有field也被标记完了)
-    - **灰色**:对象本身被扫描,但还没扫描完该对象中的子对象( 它的field还没有被标记或标记完)
-    - **白色**:未被扫描对象，扫描完成所有对象之后，最终为白色的为不可达对象，即垃圾对象(对象没有被标记到)
-
-#### 提到并发标记，我们不得不了解并发标记的三色标记算法。它是描述追踪式回收器的一种有效的方法，利用它可以推演回收器的正确性
-
-遍历了所有可达的对象后，所有可达的对象都变成了黑色。不可达的对象即为白色，需要被清理,如图：
-
-[![三色标记算法](https://github.com/weolwo/jvm-learn/raw/master/src/resources/images/sanmark.gif)](https://github.com/weolwo/jvm-learn/blob/master/src/resources/images/sanmark.gif)
-
-- 但是如果在标记过程中，应用程序也在运行，那么对象的指针就有可能改变。这样的话，我们就会遇到一个问题:对象丢失问题
-
-[![img](https://github.com/weolwo/jvm-learn/raw/master/src/resources/images/sans3.png)](https://github.com/weolwo/jvm-learn/blob/master/src/resources/images/sans3.png)
-
-这时候应用程序执行了以下操作: A.c=C B.c=null 这样，对象的状态图变成如下情形:
-
-[![img](https://github.com/weolwo/jvm-learn/raw/master/src/resources/images/sans2.png)](https://github.com/weolwo/jvm-learn/blob/master/src/resources/images/sans2.png)
-
-这时候垃圾收集器再标记扫描的时候就会变成下图这样
-
-[![img](https://github.com/weolwo/jvm-learn/raw/master/src/resources/images/sans1.png)](https://github.com/weolwo/jvm-learn/blob/master/src/resources/images/sans1.png)
-
-- **很显然，此时C是白色，被认为是垃圾需要清理掉，显然这是不合理的**
-
-### SATB
-
-- 在G1中，使用的是SATB ( Snapshot-At-The- Beginning)的方式，删除的时候记录所有的对象
-- 它有3个步骤
-    - 在开始标记的时候生成一个快照图，标记存活对象
-    - 在并发标记的时候所有被改变的对象入队(在writebarrier里把所有旧的引用所指向的对象都变成非白的)
-    - 可能存在浮动垃圾，将在下次被收集
-
-### G1混合式回收
-
-- G1到现在可以知道哪些老的分区可回收垃圾最多。当全局并发标记完成后，在某个时刻，就开始了Mixed GC。这些垃圾回收被称作“混合式”是因为他们不仅仅进行正常的新生代垃圾收集，同时也回收部分后台扫描线程标记的分区混合式GC也是采用的复制清理策略，当GC完成后，会重新释放空间
-
-### SATB详解
-
-- SATB是维持并发GC的一种手段。G1并发的基础就是SATB。SATB可以理解成在GC开始之前对堆内存里的对象做次快照，此时活的对象就认为是活的，从而形成了一个对象图。
-- 在GC收集的时候，新生代的对象也认为是活的对象，除此之外其他不可达的对象都认为是垃圾对象
-
-### 如何找到在GC过程中分配的对象呢?
-
-- 每个region记录着两个top-at-mark-start ( TAMS 指针，分别为prevTAMS和nextTAMS。在TAMS以上的对象就是新分配的，因而被视为隐式marked。
-- 通过这种方式我们就找到了在GC过程中新分配的对象，并把这些对象认为是活的对象。
-- 解决了对象在GC过程中分配的问题，那么在GC过程中引用发生变化的问题怎么解决呢?
-- G1给出的解决办法是通过WriteBarrier.Write Barrier就是对引用字段进行赋值做了额外处理。通过Write Barrier就可以了解到哪些引用对象发生了什么样的变化
-
-### mark的过程就是遍历heap标记live object的过程，
-
-- 采用的是三色标记算法，这三种颜色为white(表示还未访问到)、gray(访问到但是它用到的引用还没有完全扫描、black( 访问到而且其用到的引用已经完全扫描完)
-- 整个三色标记算法就是从GCroots出发遍历heap,针对可达对象先标记white为gray,然后再标记gray为black;遍历完成之后所有可达对象都是black的，所有white都是可以回收的
-- SATB仅仅对于在marking开始阶段进行"snapshot"(marked all reachable at markstart)，但是concurrent的时候并发修改可能造成对象漏标记
-- 对black新引用了一个white对象，然后又从gray对象中删除了对该white对象的引用，这样会造成了该white对象漏标记
-- 对black新引用了一个white对象，然后从gray对象删了一个引用该white对象的white对象，这样也会造成了该white对象漏标记，
-- 对black新引用了一个刚new出来的white对象，没有其他gray对象引用该white对象，这样也会造成了该white对象漏标记
-- 对于三色算法在concurrent的时候可能产生的漏标记问题，SATB在marking阶段中，对于从gray对象移除的目标引用对象标记为gray,对于black引用的新产生的对象标记为black;由于是在开始的时候进行snapshot,因而可能存在Floating Garbage
-
-### 漏标与误标
-
-- 误标没什么关系，顶多造成浮动垃圾，在下次gc还是可以回收的，但是漏标的后果是致命的，把本应该存活的对象给回收了，从而影响的程序的正确性
-- 漏标的情况只会发生在白色对象中，且满足以下任意一个条件
-    - 并发标记时，应用线程给一个黑色对象的引用类型字段赋值 了该白色对象
-    - 并发标记时，应用线程删除所有灰色对象到该白色对象的引用
-- 对于第一种情况，利用post-write barrier,记录所有新增的引用关系，然后根据这些引用关系为根重新扫描一-遍
-- 对于第二种情况，利用pre-write barrier,将所有即将被删除的引用关系的旧引用记录下来，最后以这些旧引用为根重新扫描一遍
-
-### 停顿预测模型
-
-- G1收集器突出表现出来的一点是通过一个停顿预测模型根据用户配置的停顿时间来选择CSet的大小，从而达到用户期待的应用程序暂停时间。
-- 通过-XX:MaxGCPauseMillis参数来设置。这一点有点类似于ParallelScavenge收集器。 关于停顿时间的设置并不是越短越好。
-- 设置的时间越短意味着每次收集的CSet越小，导致垃圾逐步积累变多，最终不得不退化成SerialGC;停顿时间设置的过长，那么会导致每次都会产生长时间的停顿，影响了程序对外的响应时间
-
-### G1的收集模式
-
-- G1的运行过程是这样的:会在Young GC和Mixed GC之间不断地切换运行，同时定期地做全局并发标记，在实在赶不上对象创建速度的情况下 使用Full GC(Serial GC)。
-- 初始标记是在Young GC.上执行的，在进行全局并发标记的时候不会做MixedGC,在做MixedGC的时候也不会启动初始标记阶段。
-- 当MixedGC赶不上对象产生的速度的时候就退化成FullGC，这一点是需要重点调优的地方
-
-### G1最佳实践
-
-- 不要设置新生代和老年代的大小，G1收集器在运行的时候会调整新生代和老年代 的大小。通过改变代的大小来调整对象晋升的速度以及晋升年龄，从而达到我们为收集器设置的暂停时间目标。
-- 设置了新生代大小相当于放弃了G1为我们做的自动调优。我们需要做的只是设置整个堆内存的大小，剩下的交给G1自已去分配各个代的大小即可。
-- 不断调优暂停时间指标
-    - 通过-XX:MaxGCPauseMillis=x可以设置启动应用程序暂停的时间，G1在运行的时候会根据这个参数选择CSet来满足响应时间的设置。一般情况下这个值设置到100ms或者200ms都是可以的(不同情况下会不一样)，但如果设置成50ms就不太合理。暂停时间设置的太短，就会导致出 现G1跟不上垃圾产生的速度。最终退化成Full GC。所以对这个参数的调优是一个持续的过程，逐步调整到最佳状态。
-- 关注Evacuation Failure
-    - Evacuation（表示copy） Failure类似于CMS里面的晋升失败，堆空间的垃圾太多导致无法完成Region之间的拷贝，于是不得不退化成Full GC来做一次全局范围内的垃圾收集
-
-### G1日志解析:
-
-```
-/**
- * Created BY poplar ON 2019/11/30
- * G1日志分析
- * 虚拟机相关参数：
- * -verbose:gc
- * -Xms10m
- * -Xmx10m
- * -XX:+UseG1GC 表示垃圾收集器使用G1
- * -XX:+PrintGCDetails
- * -XX:+PrintGCDateStamps
- * -XX:MaxGCPauseMillis=200m 设置垃圾收集最大停顿时间
- */
-public class G1LogAnalysis {
-
-    public static void main(String[] args) {
-        int size = 1024 * 1024;
-        byte[] bytes1 = new byte[size];
-        byte[] bytes2 = new byte[size];
-        byte[] bytes3 = new byte[size];
-        byte[] bytes4 = new byte[size];
-        System.out.println("hello world");
-    }
 }
-/**
- * GC日志：
- * 2019-11-30T16:13:41.663+0800: [GC pause (G1 Humongous Allocation【说明分配的对象超过了region大小的50%】) (young) (initial-mark), 0.0014516 secs]
- * [Parallel Time: 1.1 ms, GC Workers: 4【GC工作线程数】]
- * [GC Worker Start (ms): Min: 167.0, Avg: 167.1, Max: 167.1, Diff: 0.1]【几个垃圾收集工作的相关信息统计】
- * [Ext Root Scanning (ms): Min: 0.4, Avg: 0.4, Max: 0.4, Diff: 0.1, Sum: 1.6]
- * [Update RS (ms): Min: 0.0, Avg: 0.0, Max: 0.0, Diff: 0.0, Sum: 0.0]
- * [Processed Buffers: Min: 0, Avg: 0.0, Max: 0, Diff: 0, Sum: 0]
- * [Scan RS (ms): Min: 0.0, Avg: 0.0, Max: 0.0, Diff: 0.0, Sum: 0.0]
- * [Code Root Scanning (ms): Min: 0.0, Avg: 0.0, Max: 0.0, Diff: 0.0, Sum: 0.0]
- * [Object Copy (ms): Min: 0.6, Avg: 0.6, Max: 0.6, Diff: 0.0, Sum: 2.4]
- * [Termination (ms): Min: 0.0, Avg: 0.0, Max: 0.0, Diff: 0.0, Sum: 0.0]
- * [Termination Attempts: Min: 1, Avg: 1.3, Max: 2, Diff: 1, Sum: 5]
- * 【上面的几个步骤为YOUNG GC的固定执行步骤】
- * 阶段1:根扫描
- * 静态和本地对象被描
- * 阶段2:更新RS
- * 处理dirty card队列更新RS
- * 阶段3:处理RS
- * 检测从年轻代指向老年代的对象
- * 阶段4:对象拷贝
- * 拷贝存活的对象到survivor/old区域
- * 阶段5:处理引用队列
- * 软引用，弱引用，虚引用处理
- * [GC Worker Other (ms): Min: 0.0, Avg: 0.0, Max: 0.0, Diff: 0.0, Sum: 0.2]
- * [GC Worker Total (ms): Min: 1.0, Avg: 1.1, Max: 1.1, Diff: 0.1, Sum: 4.2]
- * [GC Worker End (ms): Min: 168.1, Avg: 168.1, Max: 168.1, Diff: 0.0]
- * [Code Root Fixup: 0.0 ms]
- * [Code Root Purge: 0.0 ms]
- * [Clear CT: 0.1 ms]【清楚cardTable所花费时间】
- * [Other: 0.3 ms]
- * [Choose CSet: 0.0 ms]
- * [Ref Proc: 0.1 ms]
- * [Ref Enq: 0.0 ms]
- * [Redirty Cards: 0.1 ms]
- * [Humongous Register: 0.0 ms]
- * [Humongous Reclaim: 0.0 ms]
- * [Free CSet: 0.0 ms]
- * [Eden: 2048.0K(4096.0K)->0.0B【新生代清理后】(2048.0K) Survivors: 0.0B->1024.0K Heap: 3800.2K(10.0M)->2752.1K(10.0M)]
- * [Times: user=0.00 sys=0.00, real=0.01 secs]
- * 2019-11-30T16:13:41.671+0800: [GC concurrent-root-region-scan-start]
- * 2019-11-30T16:13:41.671+0800: [GC concurrent-root-region-scan-end, 0.0008592 secs]
- * 2019-11-30T16:13:41.671+0800: [GC concurrent-mark-start]
- * 2019-11-30T16:13:41.672+0800: [GC concurrent-mark-end, 0.0000795 secs]
- * 2019-11-30T16:13:41.672+0800: [GC remark 2019-11-30T16:13:41.672+0800: [Finalize Marking, 0.0001170 secs] 2019-11-30T16:13:41.672+0800: [GC ref-proc, 0.0002159 secs] 2019-11-30T16:13:41.672+0800: [Unloading, 0.0005800 secs], 0.0011024 secs]
- * [Times: user=0.00 sys=0.00, real=0.00 secs]
- * 2019-11-30T16:13:41.673+0800: [GC cleanup 4800K->4800K(10M), 0.0003239 secs]
- * [Times: user=0.00 sys=0.00, real=0.00 secs]
- * hello world
- * Heap
- * garbage-first heap   total 10240K, used 4800K [0x00000000ff600000, 0x00000000ff700050, 0x0000000100000000)
- * region size 1024K【说明region默认大小】, 2 young (2048K), 1 survivors (1024K)
- * Metaspace       used 3224K, capacity 4496K, committed 4864K, reserved 1056768K
- * class space    used 350K, capacity 388K, committed 512K, reserved 1048576K
- */
 ```
+
+### 
+
